--- a/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
+++ b/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\LingoLearn.Domain\LingoLearn.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Languages\Queries\" />
+    </ItemGroup>
+
 </Project>
