Dashboard: add all requests => students && admin

--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <Folder Include="Settings\Commands\" />
       <Folder Include="Settings\Queries\" />
+      <Folder Include="Students\Commands\LogIn\" />
     </ItemGroup>
 
 </Project>
