--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Lessons\" />
       <Folder Include="Levels\" />
       <Folder Include="Settings\Commands\" />
       <Folder Include="Settings\Queries\" />
