--- a/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
+++ b/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
       <Folder Include="Achievements\Commands\" />
       <Folder Include="Achievements\Queries\" />
+      <Folder Include="Levels\" />
     </ItemGroup>
 
 </Project>
