Dashboard: add all requests => QuestionBank

--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -19,6 +19,7 @@
       <Folder Include="Certificates\" />
       <Folder Include="Lessons\" />
       <Folder Include="Levels\" />
+      <Folder Include="QuestionsBank\" />
       <Folder Include="Settings\Commands\" />
       <Folder Include="Settings\Queries\" />
     </ItemGroup>
