Mobile: add all requests => QuestionBank

--- a/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
+++ b/LingoLearn.Application.Mobile/LingoLearn.Application.Mobile.csproj
@@ -20,6 +20,7 @@
       <Folder Include="Achievements\Commands\" />
       <Folder Include="Achievements\Queries\" />
       <Folder Include="Levels\" />
+      <Folder Include="QuestionsBank\Commands\" />
       <Folder Include="Replies\Commands\" />
     </ItemGroup>
 
