--- a/LingoLearn.Infrastructure/LingoLearn.Infrastructure.csproj
+++ b/LingoLearn.Infrastructure/LingoLearn.Infrastructure.csproj
@@ -7,9 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MailKit" Version="4.7.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.30.0" />
+      <PackageReference Include="MimeKit" Version="4.7.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
     </ItemGroup>
 
