--- a/LingoLearn.Persistence/LingoLearn.Persistence.csproj
+++ b/LingoLearn.Persistence/LingoLearn.Persistence.csproj
@@ -24,6 +24,7 @@
     <ItemGroup>
       <Compile Remove="Migrations\20230602133901_Initial.cs" />
       <Compile Remove="Migrations\20230602133901_Initial.Designer.cs" />
+      <Compile Remove="Migrations\20240716120716_ContactUs.Designer.cs" />
     </ItemGroup>
 
 </Project>
