Dashboard: add all requests => Advertisements && ContactsUs

--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Advertisements\" />
       <Folder Include="Certificates\" />
       <Folder Include="Lessons\" />
       <Folder Include="Levels\" />
