Dashboard: add new requests => Home

--- a/LingoLearn/LingoLearn.csproj
+++ b/LingoLearn/LingoLearn.csproj
@@ -59,6 +59,42 @@
       <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-4\c378d048-3e33-4a1a-a300-6a403d6bdf14See more 3D in my profile⚡⚡⚡.jpg" />
       <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-4\c9a88b9e-f88e-4629-b3b5-5a9ae0544272See more 3D in my profile⚡⚡⚡.jpg" />
       <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-4\d67f99d9-8184-4004-adbc-00e73416f04f07eee685-c984-4632-8fdc-0aeaabc855b5.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-5\e7b507d1-48ad-42ce-b8c9-b0b1e7f51435c7c6b9e5-7f67-451c-af9f-b946f7e648ce.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\039831fd-96d9-4914-82fe-dea0d4d1dbd334f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\04437060-0157-4ad2-be18-0e6f3644f0a034f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\08b893e2-b0b0-40cc-b706-161ce388991451f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\185834c8-3fd9-4b4c-9dd6-59d6d206a11d34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\26c4e80a-9f96-4106-b3ab-027f8b2aa2d751f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\26fe4c05-0eba-4813-9b91-d39fe0084124Download free image of Butterflies abstract pattern petal_ by Hein about 8k, abstract, art, backgrounds, and blossom 14227310.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\2982a5ac-39f9-4181-9f68-2b78e4989eb8Download free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\2e6b17b4-193a-4e4d-9992-7ac4042b2cdaDownload free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\34478d6e-f0c9-4fca-a2ee-9e5c0c8915d7Download free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\3b7620a8-75bf-4f6a-b664-fc21e2483c4551f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\3fec3d94-ba76-4594-bd79-46bd87f26a3951f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\40c0bf6b-48e8-420c-a9e1-43bcc8b7f1bd34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\5265ebae-6ef5-42e7-be32-9af358d8ece834f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\55b80d44-f597-4b83-8f7e-0963603b62f8Download free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\655e9e6c-a5b7-415a-845a-98dd6578a1cc51f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\69733c0f-cd0b-473e-b36e-133ede88e70a34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\6bfce1c9-42fa-4f22-9161-cc54a624128bDownload free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\7302b1db-bd12-4819-b0d6-70faf9bd9c2851f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\8392ca20-cb2e-4ab9-a879-0ddb07946b8551f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\8f5838ca-5b43-4365-9ff5-b431b349a58734f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\922bb85e-58fb-40b6-ac74-f1f9bf6e03377bd8b09c-7a81-4b15-8896-53aa3179c5aa.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\9791ea78-6e2c-4086-ba2b-af89abd96ea2826aca2c-dcfe-4c5a-b0fc-07c8a329c991.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\a87c5746-26f3-475c-ba7c-d8efabaec96351f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\ac8f1f4b-f596-4c9c-b362-1d8754163b8a34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\b350dcb3-c0de-4c7d-8e2e-8ad0990d1b64Download free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\b9ab63dd-ccc7-433d-a56b-d2fe71bf4afc34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\bfb0d8bc-dd17-4401-b517-344319501c63لاسلكية نظري 1_compressed.pdf" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\c3472cbd-9ca8-4f50-99ae-c996dcade58a34f4b9d2-2673-4323-9856-2df0706cfb6a.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\c6020907-5b34-48bd-855a-5611d5cd0a82نظم_الزمن_الحقيقي_النظري_ملف_داعم_9_compressed_1.pdf" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\cbdbc1e6-baf0-4277-a7b9-ff87ec00cddeDownload free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\e44a1357-2fa0-47ae-9c3c-edd954cde68051f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\e5608aa7-4aa9-4215-9ea5-9e8ab7be2f5eنظم_الزمن_الحقيقي_النظري_ملف_داعم_9_compressed_1.pdf" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\f0b87f46-bedf-497d-8a5b-e4efe849428cDownload free image of Tropical flowers abstract petal plant_ by Chim  about tropical iphone wallpaper hibiscus, 8k, abstract, acrylic paint, and aesthetic 14235220.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\f588fd58-3db3-446d-9d6f-376c2c3233bf51f2b541-edcd-49fb-8218-467b0c724d65.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\Uploads\2024-7\f9cb7125-d937-46f3-9efb-136a46642828لاسلكية نظري 1_compressed.pdf" />
     </ItemGroup>
 
 </Project>
