--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FCM.Net.Core" Version="1.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     </ItemGroup>
 
