--- a/LingoLearn.Infrastructure/LingoLearn.Infrastructure.csproj
+++ b/LingoLearn.Infrastructure/LingoLearn.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FirebaseAdmin" Version="3.0.0" />
       <PackageReference Include="MailKit" Version="4.7.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
