Dashboard: add all requests => Challenges

--- a/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
+++ b/LingoLearn.Application.Dashboard/LingoLearn.Application.Dashboard.csproj
@@ -19,6 +19,8 @@
     <ItemGroup>
       <Folder Include="Advertisements\" />
       <Folder Include="Certificates\" />
+      <Folder Include="Challenges\Commands\" />
+      <Folder Include="Challenges\Queries\" />
       <Folder Include="Lessons\" />
       <Folder Include="Levels\" />
       <Folder Include="QuestionsBank\" />
